<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="pref_screen_settings">
    <PreferenceCategory android:title="@string/title_common">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_check_for_update"
            android:summary="@string/sum_check_for_update"
            android:title="@string/title_check_for_update" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_hide_common"
            android:summary="@string/sum_hide_common"
            android:title="@string/title_hide_common" />
        <CheckBoxPreference
            android:key="pref_show_tutorial2"
            android:summary="@string/sum_tutorial_is_shown"
            android:title="@string/title_tutorial" />
        <Preference
            android:key="pref_delete_plans"
            android:summary="@string/sum_delete_plans"
            android:title="@string/title_delete_plans" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_design">
        <Preference
            android:key="pref_ab_color"
            android:summary="@string/actionbar_color_sum"
            android:title="@string/actionbar_color_title" />
        <Preference
            android:key="pref_ab_icon_style"
            android:summary="@string/ab_icon_style_sum"
            android:title="@string/ab_icon_style_title" />
    </PreferenceCategory>
</PreferenceScreen>