<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/stdRow"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:background="@drawable/rectangle_hour_header"
    android:orientation="horizontal">


    <TextView
        style="@style/header_text_view"
        android:text="@string/header_std" />

    <View style="@style/Divider" />

    <TextView
        style="@style/header_text_view"
        android:text="@string/header_vertr" />

    <View style="@style/Divider" />

    <TextView
        style="@style/header_text_view"
        android:text="@string/header_fach" />

    <View style="@style/Divider" />

    <TextView
        style="@style/header_text_view"
        android:text="@string/header_raum" />

    <View style="@style/Divider" />

    <TextView
        style="@style/header_text_view"
        android:layout_gravity="center"
        android:text="@string/header_statt_lehrer" />

    <View style="@style/Divider" />

    <TextView
        style="@style/header_text_view"
        android:layout_gravity="center"
        android:text="@string/header_statt_fach" />

    <View style="@style/Divider" />

    <TextView
        style="@style/header_text_view"
        android:layout_gravity="center"
        android:text="@string/header_statt_raum" />
</LinearLayout>