<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh_holo_dark"
        android:showAsAction="always"
        android:title="@string/action_refresh" />
    <item
        android:id="@+id/action_show_links"
        android:showAsAction="never"
        android:title="@string/action_show_links" />
    <item
        android:id="@+id/action_settings"
        android:showAsAction="never"
        android:title="@string/action_settings" />
    <item
        android:id="@+id/action_feedback"
        android:showAsAction="never"
        android:title="@string/action_feedback" />
    <item
        android:id="@+id/action_about"
        android:showAsAction="never"
        android:title="@string/action_about" />
</menu>
